--- a/proyectoRovere/proyectoRovere.csproj
+++ b/proyectoRovere/proyectoRovere.csproj
@@ -85,6 +85,12 @@
     <Compile Include="Vista\frmTamaños.Designer.cs">
       <DependentUpon>frmTamaños.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vista\frmUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\frmUsuario.Designer.cs">
+      <DependentUpon>frmUsuario.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\frmTamaños.resx">
       <DependentUpon>frmTamaños.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\frmUsuario.resx">
+      <DependentUpon>frmUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
